1.17 -> 2.0:
    - devzero2000: merge commit aee9f24 from git pull request  
      https://github.com/devzero2000/POPT/pull/2 
      "Add makefile for mingw" 
      by asenm (Matt Arsenault). Include these new object 
      in EXTRA_DIST (Makefile.am) by devzero2000 (Elia Pinto)
    - devzero2000: merge commit 8396019 from git pull request  
      https://github.com/devzero2000/POPT/pull/2 
      "Work around missing format for long long in windows; fix warnings"
      by asenm (Matt Arsenault)
    - devzero2000: merge  commit ea2978d from git pull request 
      https://github.com/devzero2000/POPT/pull/2 
      "Fix build with MinGW 32/64 + MSVC" by arsenm
      (Matt Arsenault)
    - devzero2000: fix compiler warning -Wunused-but-set-variable (GCC 4.6)
    - devzero2000: redo the autofu vendor-script linker script check for openindiana native
      ld, using modern and not deprecated autoconf construct. Even if the check is not perfect 
      but it is based on a resultant ld warning, on openindiana the result actually work
      with gcc and native ld. This patch also fix the build 
      on openindiana broken by the precedent patch.
    - devzero2000: add missing README-prereq
    - devzero2000: try to redo the bootstrap check better
    - devzero2000: add configmake.h to .gitignore
    - devzero2000: document the /etc/popt.d use in popt(3)
    - jbj: fix: plug another memory leak related to contiguous argv malloc.
    - jbj: fix: plug a memory leak related to contiguous argv malloc.
    - devzero2000: fix the configmake.h make rule: update its timestamp also if it don't change.
    - devzero2000: revert bad commit: add missing glob.h and fnmatch.h in configure.ac, add struct sb in poptconfig.c
    - devzero2000: Rewrite the logic in poptReadDefaultConfig 
      for finding the popt alias file
    - devzero2000: update .cvsignore
    - devzero2000: fix compiler warning [-Wuninitialized]
    - jbj: i18n: update po files (Translation Project).